@@ -1,3 +1,8 @@
+13 February 2009
+
+* Looking up argv[0] is expensive, so just use p_comm for the window name which
+  is good enough. Also increase name update time to 500 ms.
+
 11 February 2009
 
 * Only use ri when actually at the top of the screen; just move the cursor up
@@ -1104,7 +1109,7 @@
   (including mutt, emacs). No status bar yet and no key remapping or other
   customisation.
 
-$Id: CHANGES,v 1.253 2009-02-12 00:03:58 nicm Exp $
+$Id: CHANGES,v 1.254 2009-02-13 00:43:04 nicm Exp $
 
  LocalWords:  showw utf UTF fulvio ciriaco joshe OSC APC gettime abc DEF OA clr
  LocalWords:  rivo nurges lscm Erdely eol smysession mysession ek dstname RB ms
